--- a/frontend/src/components/Techs.css
+++ b/frontend/src/components/Techs.css
@@ -1,6 +1,6 @@
-.about {
+.techs {
   margin: 0 auto;
-  padding: 110px 70px;
+  padding: 100px 70px;
   background-color: #272727;
   display: flex;
   flex-direction: column;
@@ -8,7 +8,7 @@
   box-sizing: border-box;
 }
 
-.about__description {
+.techs__description {
   font-family: 'Inter';
   font-style: normal;
   font-weight: 400;
@@ -19,79 +19,54 @@
   align-self: start;
 }
 
-.about__container {
+.techs__container {
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   border-top: solid #424242;
   justify-content: center;
   align-items: center;
   width: 100%;
-  padding: 70px 0 110px;
-  gap: 20px;
 }
 
-.about__topic-stage {
-  width: 50%;
-}
-
-.about__topic-name {
+.techs__title {
   font-family: 'Inter';
   font-style: normal;
   font-weight: 400;
-  font-size: 20px;
-  line-height: 24px;
+  font-size: 50px;
+  line-height: 58px;
+  text-align: center;
   letter-spacing: -0.04em;
   color: #FFFFFF;
+  margin: 90px 0 0;
 }
 
-.about__topic-text {
+.techs__info {
   font-family: 'Inter';
   font-style: normal;
   font-weight: 400;
   font-size: 14px;
   line-height: 20px;
+  text-align: center;
+  letter-spacing: -0.04em;
   color: #FFFFFF;
+  margin: 26px 0 100px;
+  max-width: 460px;
 }
 
-.about__line-container {
+.techs__collection {
   display: flex;
   flex-direction: row;
-  justify-content: center;
-  align-items: center;
-  width: 100%;
+  gap: 10px;
 }
 
-.about__line-20 {
-  width: 20%;
-}
-
-.about__line-80 {
-  width: 80%;
-}
-
-.about__line {
-  height: 36px;
+.techs__item {
+  background-color: #303030;
+  color: white;
+  margin: 0;
+  width: 90px;
+  height: 60px;
+  border-radius: 10px;
   display: flex;
   justify-content: center;
   align-items: center;
-}
-
-.about__line_green {
-  background-color: #3DDC84;
-  color: black;
-}
-
-.about__line_gray {
-  background-color: #303030;
-  color: white;
-}
-
-.about__line-name {
-  font-family: 'Inter';
-  font-style: normal;
-  font-weight: 500;
-  font-size: 14px;
-  line-height: 17px;
-  text-align: center;
-  color: #8B8B8B;
 }
