--- a/frontend/src/components/main/aboutMe/AboutMe.css
+++ b/frontend/src/components/main/aboutMe/AboutMe.css
@@ -1,6 +1,6 @@
 .aboutMe {
   margin: 0 auto;
-  padding: 110px 70px 0;
+  padding: 105px 70px 0;
   display: flex;
   flex-direction: column;
   background-color: #202020;
@@ -14,6 +14,7 @@
   line-height: 27px;
   letter-spacing: -0.04em;
   color: #FFFFFF;
+  text-align: start;
 }
 
 .aboutMe__container {
@@ -29,7 +30,7 @@
 }
 
 .aboutMe__name {
-  margin: 0;
+  margin: 67px 0 0;
   font-family: 'Inter';
   font-style: normal;
   font-weight: 400;
@@ -60,6 +61,7 @@
   color: #FFFFFF;
   mix-blend-mode: normal;
   text-align: start;
+  margin: 7px 0 0;
 }
 
 .aboutMe__link {
@@ -76,4 +78,7 @@
 
 .aboutMe__avatar {
   border-radius: 10px;
+  width: 270px;
+  height: 327px;
+  margin-top: 67px;
 }
