--- a/frontend/src/components/Footer.css
+++ b/frontend/src/components/Footer.css
@@ -52,3 +52,44 @@
   color: #FFFFFF;
   text-decoration: none;
 }
+
+@media (max-width: 768px) {
+  .footer {
+    padding: 57px 30px 0px;
+  }
+}
+
+@media (max-width: 460px) {
+  .footer {
+    padding: 56px 10px 0px;
+  }
+
+  .footer__description {
+    font-size: 12px;
+    line-height: 15px;
+
+  }
+
+  .footer__container {
+    flex-direction: column-reverse;
+    padding-top: 28px;
+  }
+
+  .footer__nav {
+    flex-direction: column;
+    align-items: center;
+    gap: 13px;
+  }
+
+  .footer__navLink {
+    font-size: 12px;
+    line-height: 15px;
+  }
+
+  .footer__year {
+    font-size: 12px;
+    line-height: 15px;
+    color: #8B8B8B;
+    margin-top: 30px;
+  }
+}
