--- a/frontend/src/components/main/aboutMe/AboutMe.css
+++ b/frontend/src/components/main/aboutMe/AboutMe.css
@@ -15,12 +15,16 @@
   letter-spacing: -0.04em;
   color: #FFFFFF;
   text-align: start;
+  margin-bottom: 0;
+  padding-bottom: 22px;
+  border-bottom: solid #424242;
 }
 
 .aboutMe__container {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+  gap: 20px;
 }
 
 .aboutMe__container-bio {
@@ -81,4 +85,92 @@
   width: 270px;
   height: 327px;
   margin-top: 67px;
+}
+
+@media (max-width: 768px) {
+  .aboutMe {
+    padding: 85px 50px 0;
+  }
+
+  .aboutMe__name {
+    font-size: 40px;
+    line-height: 40px;
+    margin-bottom: 2px;
+  }
+
+  .aboutMe__about {
+    font-size: 12px;
+    line-height: 18px;
+  }
+
+  .aboutMe__bio {
+    font-size: 12px;
+    line-height: 18px;
+    margin: 9px 0 0;
+    max-width: 368px;
+  }
+
+  .aboutMe__avatar {
+    width: 255px;
+    height: 307px;
+  }
+
+  .aboutMe__link {
+    margin-top: 88px;
+  }
+}
+
+@media (max-width: 600px) {
+  .aboutMe__container {
+    flex-direction: column-reverse;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .aboutMe__avatar {
+    min-width: 292px;
+    width: 80%;
+    min-height: 352px;
+    height: 80%;
+  }
+}
+
+@media (max-width: 460px) {
+  .aboutMe__description {
+    font-size: 18px;
+    line-height: 22px;
+    padding-bottom: 26px;
+  }
+
+  .aboutMe {
+    margin: 0 auto;
+    padding: 69px 15px 0;
+  }
+
+  .aboutMe__avatar {
+    margin-top: 60px;
+  }
+
+  .aboutMe__name {
+    font-size: 30px;
+    line-height: 36px;
+    margin-top: 19px;
+    margin-bottom: 9px;
+  }
+
+  .aboutMe__about {
+    font-size: 11px;
+    line-height: 16px;
+  }
+
+  .aboutMe__bio {
+    font-size: 11px;
+    line-height: 16px;
+    margin: 9px 0 0;
+    max-width: 368px;
+  }
+
+  .aboutMe__link {
+    margin-top: 40px;
+  }
 }
