--- a/frontend/src/components/main/aboutProject/AboutProject.css
+++ b/frontend/src/components/main/aboutProject/AboutProject.css
@@ -34,7 +34,6 @@
   width: 50%;
   display: flex;
   flex-direction: column;
-
 }
 
 .aboutProject__topic-name {
@@ -65,7 +64,6 @@
   justify-content: center;
   align-items: center;
   width: 100%;
-  
 }
 
 .aboutProject__line-20 {
@@ -82,6 +80,12 @@
   justify-content: center;
   align-items: center;
   margin: 0;
+  font-family: 'Inter';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 17px;
+  text-align: center;
 }
 
 .aboutProject__line_green {
@@ -102,4 +106,79 @@
   line-height: 17px;
   text-align: center;
   color: #8B8B8B;
+  letter-spacing: -0.04em;
+}
+
+@media (max-width: 768px) {
+  .aboutProject {
+    padding: 70px 50px;
+  }
+
+  .aboutProject__container {
+    gap: 30px;
+    padding: 49px 0 92px;
+  }
+
+  .aboutProject__topic-text {
+    margin: 2px 0;
+    font-size: 12px;
+    line-height: 18px;
+  }
+
+  .aboutProject__line-20 {
+    width: 21%;
+  }
+}
+
+@media (max-width: 460px) {
+  .aboutProject {
+    padding: 55px 18px;
+  }
+
+  .aboutProject__description {
+    font-size: 18px;
+    line-height: 22px;
+    margin-bottom: 26px;
+  }
+
+  .aboutProject__topic-stage {
+    width: 100%;
+  }
+
+  .aboutProject__container {
+    flex-direction: column;
+    gap: 38px;
+    padding: 42px 0 60px;
+  }
+
+  .aboutProject__topic-name {
+    font-size: 18px;
+    line-height: 22px;
+    margin-bottom: 16px;
+  }
+
+  .aboutProject__topic-text {
+    font-size: 11px;
+    line-height: 16px;
+    margin: 0;
+  }
+
+  .aboutProject__line {
+    height: 35px;
+    font-size: 11px;
+    line-height: 13px;
+  }
+
+  .aboutProject__line-20 {
+    width: 35%;
+  }
+
+  .aboutProject__line-80 {
+    width: 65%;
+  }
+
+  .aboutProject__line-name {
+    font-size: 11px;
+    line-height: 13px;
+  }
 }
