--- a/frontend/src/components/main/promo/Promo.css
+++ b/frontend/src/components/main/promo/Promo.css
@@ -1,6 +1,6 @@
 .promo {
-  background-image: url('../../../image/background-promo.png');
-  height: 524px;
+  background-color: #073042;
+  min-height: 524px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -15,6 +15,7 @@
 
 .promo__logo {
   background-image: url('../../../image/promo__logo.png');
+  background-size: cover;
   width: 320px;
   height: 320px;
   position: relative;
@@ -35,4 +36,51 @@
   width: 730px;
   height: 116px;
   top: 48px;
+}
+
+@media (max-width: 768px) {
+  .promo {
+    min-height: 784px;
+  }
+
+  .promo__logo {
+    top: -7px;
+    left: 0px;
+  }
+
+  .promo__title {
+    top: 60px;
+  }
+}
+
+@media (max-width: 690px) {
+  .promo__title {
+    font-size: 31px;
+    line-height: 39px;
+    max-width: 500px;
+    top: 25px;
+  }
+
+  .promo__logo {
+    width: 300px;
+    height: 300px;
+    top: -18px;
+  }
+
+  .promo {
+    min-height: 570px;
+  }
+}
+
+@media (max-width: 460px) {
+  .promo__title {
+    font-size: 31px;
+    line-height: 39px;
+    max-width: 300px;
+  }
+
+  .promo__logo {
+    width: 248px;
+    height: 248px;
+  }
 }
