--- a/frontend/src/components/main/techs/Techs.css
+++ b/frontend/src/components/main/techs/Techs.css
@@ -57,11 +57,19 @@
   display: flex;
   flex-direction: row;
   gap: 10px;
+  justify-content: center;
 }
 
 .techs__item {
   background-color: #303030;
-  color: white;
+  font-family: 'Inter';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 15px;
+  text-align: center;
+  letter-spacing: -0.04em;
+  color: #FFFFFF;
   margin: 0;
   width: 90px;
   height: 60px;
@@ -69,4 +77,60 @@
   display: flex;
   justify-content: center;
   align-items: center;
+}
+
+@media (max-width: 768px) {
+  .techs {
+    padding: 74px 50px;
+  }
+
+  .techs__title {
+    margin: 79px 0 0;
+  }
+
+  .techs__collection {
+    flex-wrap: wrap;
+  }
+
+  .techs__info {
+    margin: 22px 0 84px;
+    font-size: 12px;
+    line-height: 18px;
+  }
+
+  .techs__item {
+    width: 84px;
+    height: 57px;
+  }
+}
+
+@media (max-width: 460px) {
+
+  .techs {
+    padding: 55px 18px;
+  }
+
+  .techs__collection {
+    padding: 0 50px;
+    justify-content: start;
+  }
+
+  .techs__description {
+    font-size: 18px;
+    line-height: 22px;
+    margin-bottom: 25px;
+  }
+
+  .techs__title {
+    font-size: 30px;
+    line-height: 36px;
+    margin-top: 60px;
+  }
+
+  .techs__info {
+    font-size: 11px;
+    line-height: 16px;
+    margin-top: 25px;
+    margin-bottom: 48px;
+  }
 }
