--- a/frontend/src/components/Header.css
+++ b/frontend/src/components/Header.css
@@ -10,7 +10,8 @@
 .header__movie-nav {
   display: flex;
   flex-direction: row;
-  gap: 20px;
+  gap: 17px;
+  margin-left: 50px;
 }
 
 .header__link-movie {
@@ -28,7 +29,7 @@
   display: flex;
   flex-direction: row;
   align-items: center;
-  gap: 20px;
+  gap: 10px;
 }
 
 .header__account-name {
@@ -49,4 +50,52 @@
   background-image: url(../image/header__account-logo.svg);
   background-size: cover;
   background-repeat: no-repeat;
+}
+
+.header__burger {
+  width: 44px;
+  height: 44px;
+  background-image: url(../image/header__burger.png);
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-color: #202020;
+  border: 0;
+  display: none;
+}
+
+@media (max-width: 768px) {
+  .header {
+    padding: 16px 30px;
+  }
+
+  .header__burger {
+    display: block;
+  }
+
+  .header__movie-nav {
+    display: none;
+  }
+
+  .header__account-info {
+    display: none;
+  }
+}
+
+@media (max-width: 460px) {
+  .header {
+    padding: 16px 14px;
+  }
+
+  .header__logo {
+    width: 38px;
+    height: 38px;
+  }
+
+  .header__burger {
+    width: 24px;
+    height: 40px;
+    margin-right: 8px;
+    margin-top: 1px;
+  }
 }
