--- a/frontend/src/components/movies/searchForm/SearchForm.css
+++ b/frontend/src/components/movies/searchForm/SearchForm.css
@@ -1,6 +1,6 @@
 .search-form {
   background-color: #202020;
-  padding: 18px 70px;
+  padding: 70px 70px;
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
@@ -13,7 +13,7 @@
   align-items: center;
   width: 100%;
   border-bottom: solid #424242;
-  padding-bottom: 13px;
+  padding-bottom: 9px;
 }
 
 .search-form__input {
@@ -25,6 +25,10 @@
   font-size: 28px;
   line-height: 34px;
   color: #8B8B8B;
+}
+
+.search-form__input:focus {
+  outline: none;
 }
 
 .search-form__button {
@@ -40,6 +44,7 @@
   width: 58.6px;
   height: 34px;
   border: 0;
+  margin-top: -2px;
 }
 
 .search-form__checkbox-container {
@@ -48,7 +53,7 @@
   align-items: start;
   align-self: flex-start;
   padding-top: 32px;
-  gap: 30px;
+  gap: 25px;
 }
 
 .search-form__checkbox {
@@ -84,4 +89,45 @@
   line-height: 18px;
   color: #FFFFFF;
   margin: 0;
+  margin-top: 1px;
+}
+
+@media (max-width: 768px) {
+  .search-form {
+    padding: 78px 30px;
+  }
+
+  .search-form__input {
+    width: 90%;
+  }
+}
+
+@media (max-width: 460px) {
+  .search-form {
+    padding: 86px 13px;
+    justify-content: center;
+  }
+
+  .search-form__input {
+    font-size: 18px;
+    line-height: 22px;
+  }
+
+  .search-form__button {
+    Width: 67px;
+    Height: 34px;
+  }
+
+  .search-form__checkbox-description {
+    font-size: 11px;
+    line-height: 18px;
+  }
+
+  .search-form__checkbox-container {
+    flex-direction: row-reverse;
+    margin: 0 auto;
+    padding-top: 38px;
+    padding-right: 10px;
+    gap: 14px;
+  }
 }
