--- a/frontend/src/components/main/navTab/NavTab.css
+++ b/frontend/src/components/main/navTab/NavTab.css
@@ -25,6 +25,11 @@
   color: #FFFFFF;
 }
 
+.navTab__item:hover {
+  cursor: pointer;
+  opacity: .6;
+}
+
 @media (max-width: 460px) {
   .navTab {
     padding: 24px 50px;
