--- a/frontend/src/components/profile/Profile.css
+++ b/frontend/src/components/profile/Profile.css
@@ -33,12 +33,12 @@
 .profile__container-input {
   width: 100%;
   display: flex;
+  flex-wrap: wrap;
   flex-direction: row;
 }
 
 .profile__container-input:first-child {
   border-bottom: solid #424242;
-  padding-bottom: 12px;
   margin-bottom: 16px;
 }
 
@@ -52,7 +52,7 @@
   line-height: 13px;
   text-align: right;
   color: #FFFFFF;
-  width: 70%;
+  width: 79%;
 }
 
 .profile__input:focus {
@@ -66,7 +66,7 @@
   font-size: 11px;
   line-height: 13px;
   color: #FFFFFF;
-  width: 30%;
+  width: 20%;
   text-align: start;
 }
 
@@ -96,6 +96,19 @@
   text-align: center;
   color: #EE3465;
   margin-top: 15px;
+}
+
+.profile__error {
+  display: inline-block;
+  color: #EE3465;
+  font-size: 10px;
+  text-align: start;
+  min-width: 100%;
+  height: 12px;
+}
+
+.profile__error-invisible {
+  display: none;
 }
 
 @media (max-width: 768px) {
