--- a/frontend/src/components/register/Registration.css
+++ b/frontend/src/components/register/Registration.css
@@ -14,9 +14,12 @@
   align-items: flex-start;
 }
 
+.registartion__logo:hover {
+  cursor: pointer;
+  opacity: .8;
+}
+
 .registration__title {
-  font-family: 'Inter';
-  font-style: normal;
   font-weight: 500;
   font-size: 24px;
   line-height: 29px;
@@ -33,8 +36,6 @@
 }
 
 .registration__label {
-  font-family: 'Inter';
-  font-style: normal;
   font-weight: 400;
   font-size: 10px;
   line-height: 12px;
@@ -46,8 +47,6 @@
 }
 
 .registration__input {
-  font-family: 'Inter';
-  font-style: normal;
   font-weight: 400;
   font-size: 14px;
   line-height: 17px;
@@ -57,7 +56,6 @@
   width: 100%;
   padding-bottom: 7px;
   border-bottom: solid #424242;
-  /* margin-bottom: 4px; */
 }
 
 .registration__input:focus {
@@ -67,8 +65,6 @@
 .registration__button-submit {
   background: #4285F4;
   border-radius: 3px;
-  font-family: 'Inter';
-  font-style: normal;
   font-weight: 500;
   font-size: 14px;
   line-height: 17px;
@@ -80,6 +76,20 @@
   margin-top: 129px;
 }
 
+.registration__button-submit[disabled] {
+  opacity: .3;
+}
+
+.registration__button-submit[disabled]:hover {
+  cursor: not-allowed;
+}
+
+.registration__button-submit:hover {
+  cursor: pointer;
+  opacity: .8;
+}
+
+
 .registration__container-bottom {
   margin: 0 auto;
   display: flex;
@@ -90,8 +100,6 @@
 }
 
 .registration__link-description {
-  font-family: 'Inter';
-  font-style: normal;
   font-weight: 400;
   font-size: 14px;
   line-height: 17px;
@@ -100,13 +108,15 @@
 }
 
 .registration__link-login {
-  font-family: 'Inter';
-  font-style: normal;
   font-weight: 400;
   font-size: 14px;
   line-height: 17px;
   text-align: center;
   color: #4285F4;
+}
+
+.registration__link-login:hover {
+  opacity: .7;
 }
 
 .registration__error {
