hot fix + валидация бэм

--- a/frontend/src/components/main/aboutMe/AboutMe.css
+++ b/frontend/src/components/main/aboutMe/AboutMe.css
@@ -70,6 +70,10 @@
   align-self: flex-start;
 }
 
+.aboutMe__link:hover {
+  opacity: .7;
+}
+
 .aboutMe__avatar {
   border-radius: 10px;
   width: 270px;
