--- a/frontend/src/components/notFound/NotFound.css
+++ b/frontend/src/components/notFound/NotFound.css
@@ -44,6 +44,13 @@
   color: #4285F4;
   text-decoration: none;
   margin-top: 168px;
+  border: 0;
+  background-color: #202020;
+}
+
+.not-found__back-link:hover {
+  cursor: pointer;
+  opacity: .7;
 }
 
 @media (max-width: 768px) {
