--- a/frontend/src/components/register/Registration.css
+++ b/frontend/src/components/register/Registration.css
@@ -14,7 +14,7 @@
   align-items: flex-start;
 }
 
-.registartion__logo:hover {
+.registration__logo:hover {
   cursor: pointer;
   opacity: .8;
 }
@@ -126,7 +126,6 @@
   text-align: start;
   min-width: 100%;
   height: 20px;
-  /* margin-bottom: 4px; */
 }
 
 .registration__error-invisible {
