переделал header и добавил no-scroll при открытом бургере

--- a/frontend/src/components/Header.css
+++ b/frontend/src/components/Header.css
@@ -109,3 +109,64 @@
     margin-top: 1px;
   }
 }
+
+.header__container {
+  display: flex;
+  gap: 30px;
+  justify-content: center;
+  align-items: center;
+}
+
+.header__button_signIn {
+  text-decoration: none;
+  font-weight: 500;
+  font-size: 12px;
+  line-height: 16px;
+  display: flex;
+  align-items: center;
+  text-align: right;
+  color: #FFFFFF;
+}
+
+.header__button_enter {
+  background: #3DDC84;
+  border-radius: 3px;
+  width: 76px;
+  height: 32px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-decoration: none;
+  font-weight: 500;
+  font-size: 12px;
+  line-height: 16px;
+  color: #000000;
+}
+
+@media (max-width: 768px) {
+  .header {
+    padding: 18px 30px;
+  }
+}
+
+@media (max-width: 460px) {
+  .header {
+    padding: 18px 14px;
+  }
+
+  .header__button_enter {
+    width: 54px;
+    height: 26px;
+    font-size: 10px;
+    line-height: 16px;
+  }
+
+  .header__container {
+    gap: 14px;
+  }
+
+  .header__button_signIn {
+    font-size: 10px;
+    line-height: 16px;
+  }
+}
