--- a/frontend/src/components/movies/searchForm/SearchForm.css
+++ b/frontend/src/components/movies/searchForm/SearchForm.css
@@ -9,11 +9,11 @@
 .search-form__container {
   display: flex;
   flex-direction: row;
+  flex-wrap: wrap;
   justify-content: space-between;
   align-items: center;
   width: 100%;
-  border-bottom: solid #424242;
-  padding-bottom: 9px;
+  position: relative;
 }
 
 .search-form__input {
@@ -23,6 +23,9 @@
   font-size: 28px;
   line-height: 34px;
   color: #8B8B8B;
+  width: 100%;
+  border-bottom: solid #424242;
+  padding-bottom: 9px;
 }
 
 .search-form__input:focus {
@@ -40,7 +43,9 @@
   width: 58.6px;
   height: 34px;
   border: 0;
-  margin-top: -2px;
+  position: absolute;
+  top: 2px;
+  right: 0;
 }
 
 .search-form__checkbox-container {
