--- a/frontend/src/components/Header.css
+++ b/frontend/src/components/Header.css
@@ -4,7 +4,11 @@
   justify-content: space-between;
   align-items: center;
   background-color: #202020;
-  padding: 18px 70px;
+  padding: 17px 70px;
+}
+
+.header_unlogged {
+  background-color: #073042;
 }
 
 .header__movie-nav {
@@ -72,7 +76,7 @@
 
 @media (max-width: 768px) {
   .header {
-    padding: 16px 30px;
+    padding: 17px 30px;
   }
 
   .header__burger {
@@ -146,13 +150,13 @@
 
 @media (max-width: 768px) {
   .header {
-    padding: 18px 30px;
+    padding: 17px 30px;
   }
 }
 
 @media (max-width: 460px) {
   .header {
-    padding: 18px 14px;
+    padding: 17px 14px;
   }
 
   .header__button_enter {
