--- a/frontend/src/components/movies/moviesCardList/MoviesCardList.css
+++ b/frontend/src/components/movies/moviesCardList/MoviesCardList.css
@@ -35,6 +35,11 @@
   height: 36px;
 }
 
+.movieCardList__button-more:hover {
+  opacity: .8;
+  cursor: pointer;
+}
+
 @media (max-width: 768px) {
   .movieCardList {
     padding: 40px 30px;
