--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -7,6 +7,9 @@ body {
   font-style: normal;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  max-width: 1280px;
+  margin: 0 auto;
+  background-color: #202020;
 }
 
 .no-scroll {
