стилизовал input:focus на свое усмотрение

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -12,6 +12,11 @@ body {
   background-color: #202020;
 }
 
+input:focus {
+  outline: none;
+  transform: scale(1.1);
+}
+
 .no-scroll {
   overflow: hidden;
 }
