--- a/frontend/src/components/Footer.css
+++ b/frontend/src/components/Footer.css
@@ -38,13 +38,18 @@
   gap: 20px;
 }
 
-.footer__navLink {
+.footer__link {
   font-weight: 400;
   font-size: 13px;
   line-height: 16px;
   text-align: right;
   color: #FFFFFF;
   text-decoration: none;
+}
+
+.footer__link:hover {
+  cursor: pointer;
+  opacity: .7;
 }
 
 @media (max-width: 768px) {
@@ -74,7 +79,7 @@
     gap: 13px;
   }
 
-  .footer__navLink {
+  .footer__link {
     font-size: 12px;
     line-height: 15px;
   }
