--- a/frontend/src/components/login/Login.css
+++ b/frontend/src/components/login/Login.css
@@ -14,6 +14,11 @@
   align-items: flex-start;
 }
 
+.login__logo:hover {
+  opacity: .7;
+  cursor: pointer;
+}
+
 .login__title {
   font-weight: 500;
   font-size: 24px;
