--- a/frontend/src/components/main/promo/Promo.css
+++ b/frontend/src/components/main/promo/Promo.css
@@ -14,7 +14,7 @@
 }
 
 .promo__logo {
-  background-image: url('../../../image/promo__logo.png');
+  background-image: url('../../../images/promo__logo.png');
   background-size: cover;
   width: 320px;
   height: 320px;
