--- a/frontend/src/components/burgerMenu/BurgerMenu.css
+++ b/frontend/src/components/burgerMenu/BurgerMenu.css
@@ -20,7 +20,7 @@
 
 .burger-menu__button-close {
   background-color: #202020;
-  background-image: url(../../image/button__close.png);
+  background-image: url(../../images/button__close.png);
   width: 22px;
   height: 22px;
   background-position: center;
@@ -78,7 +78,7 @@
   height: 26px;
   background-color: #313131;
   border-radius: 50px;
-  background-image: url(../../image/header__account-logo.svg);
+  background-image: url(../../images/header__account-logo.svg);
   background-size: cover;
   background-repeat: no-repeat;
 }
