--- a/frontend/src/components/movies/moviesCard/MoviesCard.css
+++ b/frontend/src/components/movies/moviesCard/MoviesCard.css
@@ -36,7 +36,7 @@
 .moviesCard__like {
   width: 14px;
   height: 12px;
-  background-image: url(../../../image/like_icon.png);
+  background-image: url(../../../images/like_icon.png);
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
