--- a/frontend/src/components/App.css
+++ b/frontend/src/components/App.css
@@ -1,6 +1,9 @@
 .App {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
   text-align: center;
-  max-width: 100%;
+  width: 100%;
   margin: 0 auto;
   padding: 0;
   position: relative;
