--- a/frontend/src/components/movies/moviesCard/MoviesCard.css
+++ b/frontend/src/components/movies/moviesCard/MoviesCard.css
@@ -50,6 +50,10 @@
   cursor: pointer;
 }
 
+.moviesCard__link {
+  text-decoration: none;
+}
+
 .moviesCard__poster {
   width: 220px;
   height: 122px;
