--- a/frontend/src/components/main/promo/Promo.css
+++ b/frontend/src/components/main/promo/Promo.css
@@ -5,7 +5,7 @@
   justify-content: center;
   align-items: center;
   background-image: url('../../../images/promo__logo.svg');
-  background-position: center;
+  background-position: center 81px;
   background-repeat: no-repeat;
 }
 
@@ -16,13 +16,18 @@
   text-align: center;
   letter-spacing: -0.04em;
   color: #FFFFFF;
-  width: 730px;
-  height: 116px;
+  max-width: 670px;
+  margin: 0 0 43px;
 }
 
 @media (max-width: 768px) {
   .promo {
     min-height: 784px;
+    background-position: center 223px;
+  }
+
+  .promo__title {
+    margin: 0 0 19px;
   }
 }
 
@@ -31,17 +36,24 @@
     font-size: 31px;
     line-height: 39px;
     max-width: 500px;
+
   }
-  
+
   .promo {
     min-height: 570px;
   }
 }
 
 @media (max-width: 460px) {
+  .promo {
+    background-image: url('../../../images/background-promo_320.svg');
+    background-position: center 139px;
+  }
+
   .promo__title {
     font-size: 31px;
     line-height: 39px;
     max-width: 300px;
+    margin: 0 0 42px;
   }
 }
