--- a/frontend/src/components/Footer.css
+++ b/frontend/src/components/Footer.css
@@ -2,8 +2,7 @@
   width: 100%;
   box-sizing: border-box;
   margin: 0 auto;
-  padding: 92px 70px 0px;
-  max-height: 172px;
+  padding: 73px 70px 0px;
   display: flex;
   flex-direction: column;
   background-color: #202020;
@@ -24,7 +23,7 @@
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
-  padding: 5px 0;
+  padding: 0;
 }
 
 .footer__year {
@@ -37,6 +36,7 @@
 .footer__nav-list {
   display: flex;
   flex-direction: row;
+  flex-wrap: wrap;
   gap: 20px;
   list-style-type: none;
   padding: 0;
@@ -58,7 +58,7 @@
 
 @media (max-width: 768px) {
   .footer {
-    padding: 57px 30px 0px;
+    padding: 38px 30px 0px;
   }
 }
 
@@ -77,12 +77,6 @@
     padding-top: 28px;
   }
 
-  .footer__nav {
-    flex-direction: column;
-    align-items: center;
-    gap: 13px;
-  }
-
   .footer__link {
     font-size: 12px;
     line-height: 15px;
@@ -98,11 +92,20 @@
 
 @media (max-width: 460px) {
   .footer {
-    padding: 54px 0px 0px;
+    padding: 37px 0px 0px;
   }
 
   .footer__container {
     flex-direction: column-reverse;
-    padding-top: 30px;
+    padding-top: 10px;
+  }
+
+  .footer__nav-list {
+    flex-direction: column;
+    gap: 10px;
+  }
+
+  .footer__year {
+    margin-top: 12px;
   }
 }
