--- a/frontend/src/components/main/aboutProject/AboutProject.css
+++ b/frontend/src/components/main/aboutProject/AboutProject.css
@@ -1,6 +1,6 @@
 .aboutProject {
   margin: 0 auto;
-  padding: 90px 70px;
+  padding: 94px 70px;
   background-color: #202020;
   display: flex;
   flex-direction: column;
@@ -15,6 +15,7 @@
   letter-spacing: -0.04em;
   color: #FFFFFF;
   align-self: start;
+  margin: 18px 0;
 }
 
 .aboutProject__container {
@@ -22,9 +23,9 @@
   flex-direction: row;
   border-top: solid #424242;
   justify-content: center;
-  align-items: center;
+  align-items: initial;
   width: 100%;
-  padding: 49px 0 106px;
+  padding: 52px 0 106px;
   gap: 40px;
 }
 
@@ -101,12 +102,12 @@
 
 @media (max-width: 768px) {
   .aboutProject {
-    padding: 70px 50px;
+    padding: 74px 50px;
   }
 
   .aboutProject__container {
     gap: 30px;
-    padding: 49px 0 92px;
+    padding: 52px 0 92px;
   }
 
   .aboutProject__topic-text {
@@ -122,7 +123,7 @@
 
 @media (max-width: 460px) {
   .aboutProject {
-    padding: 55px 18px;
+    padding: 53px 18px;
   }
 
   .aboutProject__description {
