--- a/frontend/src/components/main/navTab/NavTab.css
+++ b/frontend/src/components/main/navTab/NavTab.css
@@ -11,6 +11,7 @@
   margin: 0 auto;
   display: flex;
   flex-direction: row;
+  flex-wrap: wrap;
   align-items: center;
   justify-content: center;
   gap: 40px;
