--- a/frontend/src/components/Header.css
+++ b/frontend/src/components/Header.css
@@ -4,11 +4,12 @@
   justify-content: space-between;
   align-items: center;
   background-color: #202020;
-  padding: 17px 70px;
+  padding: 12px 70px;
 }
 
 .header_unlogged {
   background-color: #073042;
+  padding: 17px 70px;
 }
 
 .header__movie-nav {
@@ -17,6 +18,7 @@
   gap: 17px;
   margin-left: 50px;
   list-style-type: none;
+  padding: 0;
 }
 
 .header__link {
@@ -71,6 +73,7 @@
   background-image: url(../images/header__account-logo.svg);
   background-size: cover;
   background-repeat: no-repeat;
+  background-position: center 2px;
 }
 
 .header__logo-link:hover {
@@ -81,7 +84,7 @@
 .header__burger {
   width: 44px;
   height: 44px;
-  background-image: url(../images/header__burger.png);
+  background-image: url(../images/header__burger.svg);
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
